syntax = "proto3";
package auth;

option go_package = "authservice/proto;proto";

import "google/api/annotations.proto";

service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse) {
    option (google.api.http) = {
      post: "/v1/auth/register"
      body: "*"
    };
  }

  rpc Login(LoginRequest) returns (AuthResponse) {
    option (google.api.http) = {
      post: "/v1/auth/login"
      body: "*"
    };
  }
}

message RegisterRequest {
  string name = 1;
  string surname = 2;
  string email = 3;
  string password = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
  User user = 2;
}

message User {
  string user_id = 1;
  string name = 2;
  string surname = 3;
  string email = 4;
}

